--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,13 +18,14 @@ body {
     padding: 40px 50px; }
   .main-hero h1 {
     color: #f2f2f2;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-family: 'Big Shoulders Display', sans-serif;
+    text-transform: uppercase;
     padding: 0 50px; }
   .main-hero p {
     color: #f2f2f2;
     padding: 20px 50px;
-    opacity: 0.6; }
+    opacity: 0.7; }
 
 .hero-sedans {
   background-color: #e38826;
