--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -38,14 +38,15 @@ $veryLightGray: hsl(0, 0%, 95%); //Background, Deadings, Buttons
     }
     & h1 {
         color: $veryLightGray;
-        font-size: 2rem;
+        font-size: 2.5rem;
         font-family: 'Big Shoulders Display', sans-serif;
+        text-transform: uppercase;
         padding: 0 50px;
     }
     & p {
         color: $veryLightGray;
         padding: 20px 50px;
-        opacity: 0.6;
+        opacity: 0.7;
     }
 }
 
